# slam

./: .gitmodules  CMakeLists.txt  CmakeLists.txt  package.xml
config/: 2025047_1054_OS-2-128_122446000745.json  odom_config.json
include/: pipeline.hpp  rclcpppipeline.hpp  udpsocket.hpp
report/: vizualize.m
ros2_ws/src/slam_pipeline_ros2/: CMakeLists.txt  package.xml
ros2_ws/src/slam_pipeline_ros2/include/: rclcpppipeline.hpp  udpsocket.hpp
ros2_ws/src/slam_pipeline_ros2/src/: rclcpp.cpp  rclcpppipeline.cpp
src/: main.cpp  pipeline.cpp  rclcpp.cpp
